--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,4 +1,10 @@
 {% extends "base.html.twig" %}
+{% block css %}
+    <link rel="stylesheet" href="/assets/css/style.css">
+{% endblock %}
 {% block body %}
-
+    <div id="noteArea">
+        <div id="title">THE ULTIMATE NOTE</div>
+        <textarea></textarea>
+    </div>
 {% endblock %}
